# professional-page

./: .gitignore  about.markdown  akhirsch-science.cabal  config.toml  contact.markdown  contact.markdown~  cv.markdown  index.html  index.html~  monads.markdown  publish-mpi.sh  publish.sh  publish.sh~  site.hi  site.hs  site.hs~  stack.yaml
_site/: about.html  archive.html  contact.html  index.html  research.html  tripreports.html
content/: _index.md
css/: default.css
original/: about.markdown  index.html  monads.markdown  publications.html
posts/: 2012-11-08-ext-parser.markdown  2012-11-19-diving-into-the-parser-monad.markdown  2012-11-19-parsing-without-tieing.markdown  2013-06-15-on-pony.markdown  2013-06-15-sigma-calculus.lhs  2013-06-15-sigma-calculus.lhs~
pubs/: belief_semantics_authorization_logics.markdown  belief_semantics_authorization_logics.md  first_order_logic_for_flow_limited_authorization.md  nal_logical_results.md  strict_and_lazy_semantics_for_effects.md
research/: authorization-logic.markdown  authorization-logic.markdown~  flafol.markdown  intuitionistic-models.markdown  semantics-effects.markdown
sass/: main.scss
semdg/: index.html  site.hs
static/: CNAME
templates/: archive.html  cv.html  cv.tex  default.html  default.html~  index.html  paper.html  post.html  project-list.html~  project.html  pub-list.html  publication.html  publications.html  research.html  research.html~  taxonomy_list.html  trip_reports.html  trip_reports.html~
trip_reports/: 2012-12-08-gothenburg-trip-report.md  2012-12-13-gothenburg-trip-report-pt2.md
(+61 files in other folders)
