name:                akhirsch-science
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/akhirsch-science#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable akhirsch-science
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       process >=1.4 && < 2,
                       filepath >=1.4 && < 2,
                       directory >=1.3 && <2,
                       monadlist,
                       containers < 1,
                       pandoc < 2
